💄 Minor spacing fixes

--- a/frontend21/scss/components/table-component.scss
+++ b/frontend21/scss/components/table-component.scss
@@ -6,10 +6,10 @@
 
     &-title {
       position: sticky;
-      top: 50px;
+      top: 28px;
       margin: 0;
-      padding-top: 37px;
-      padding-bottom: 5px;
+      padding-top: 60px;
+      padding-bottom: 20px;
       font-size: 19px;
       text-transform: capitalize;
       background: color('white');
